--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   coding-standards:
-    name: "CS Fixer & PHPStan"
+    name: "CS Fixer, PHPStan & TwigCS"
     runs-on: "ubuntu-20.04"
 
     steps:
@@ -46,3 +46,6 @@ jobs:
 
       - name: "Run PHPStan"
         run: "php bin/phpstan analyse --no-progress --error-format=checkstyle | cs2pr"
+
+      - name: "Run TwigCS"
+        run: "php bin/twigcs --severity=error --display=blocking --reporter checkstyle src/ | cs2pr"
