--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-dom": "*",
+        "ext-filter": "*",
         "ext-gd": "*",
         "ext-hash": "*",
         "ext-iconv": "*",
@@ -54,20 +55,29 @@
         "bdunogier/guzzle-site-authenticator": "^1.0.0",
         "craue/config-bundle": "^2.3.0",
         "defuse/php-encryption": "^2.1",
+        "doctrine/collections": "^1.6",
+        "doctrine/common": "^2.13",
+        "doctrine/dbal": "^2.13",
         "doctrine/doctrine-bundle": "^1.9",
         "doctrine/doctrine-cache-bundle": "^1.3",
         "doctrine/doctrine-migrations-bundle": "^1.3",
+        "doctrine/event-manager": "^1.1",
+        "doctrine/migrations": "^1.8",
         "doctrine/orm": "^2.6",
+        "doctrine/persistence": "^1.3",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
         "friendsofsymfony/oauth-server-bundle": "^1.5",
         "friendsofsymfony/rest-bundle": "~2.1",
         "friendsofsymfony/user-bundle": "2.0.*",
         "guzzlehttp/guzzle": "^5.3.1",
+        "guzzlehttp/psr7": "^1.8",
         "html2text/html2text": "^4.1",
         "incenteev/composer-parameter-handler": "^2.1",
         "j0k3r/graby": "^2.0",
         "javibravo/simpleue": "^2.0",
+        "jms/serializer": "^3.17",
         "jms/serializer-bundle": "~3.6",
+        "kphoen/rulerz": "^0.21",
         "kphoen/rulerz-bundle": "~0.13",
         "laminas/laminas-code": "^3.4",
         "laminas/laminas-diactoros": "^2.3",
@@ -79,30 +89,40 @@
         "nelmio/cors-bundle": "~1.5",
         "ocramius/proxy-manager": "^2.1.1",
         "pagerfanta/pagerfanta": "^2.4",
+        "php-amqplib/php-amqplib": "^2.12",
         "php-amqplib/rabbitmq-bundle": "^1.14",
+        "php-http/client-common": "^2.4",
+        "php-http/discovery": "^1.14",
         "php-http/guzzle5-adapter": "^2.0",
+        "php-http/httplug": "^2.3",
         "php-http/httplug-bundle": "^1.14",
+        "php-http/message": "^1.13",
+        "php-http/message-factory": "^1.0",
         "pragmarx/recovery": "^0.2.0",
         "predis/predis": "^1.1.3",
+        "psr/http-message": "^1.0",
+        "psr/log": "^1.1",
         "scheb/two-factor-bundle": "^4.11.0",
         "sensio/framework-extra-bundle": "^5.2",
         "sentry/sentry-symfony": "3.5.3",
         "stof/doctrine-extensions-bundle": "^1.2",
+        "swiftmailer/swiftmailer": "^6.3",
         "symfony/dom-crawler": "^3.4",
         "symfony/monolog-bundle": "^3.1",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/symfony": "3.4.*",
         "tecnickcom/tcpdf": "^6.3.0",
         "twig/extensions": "^1.5",
+        "twig/twig": "^2.15",
         "wallabag/php-mobi": "~1.0",
         "wallabag/phpepub": "^4.0.10",
+        "willdurand/hateoas": "^3.8",
         "willdurand/hateoas-bundle": "~2.1"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.0",
         "doctrine/doctrine-fixtures-bundle": "~3.0",
         "friendsofphp/php-cs-fixer": "~2.13",
-        "guzzlehttp/psr7": "^1.0",
         "m6web/redis-mock": "^5.0",
         "php-http/mock-client": "^1.0",
         "phpstan/extension-installer": "^1.0",
