Use localhost alias instead of hard coded IP
On some systems, localhost could be in other private IP ranges (e.g., 10.X.X.X or 172.X.X.X). This suggestion minimizes errors in setting up wallabag by new users who might have MYSQL/mariadb configured on other private localhost IP ranges or on multiple bind IPs.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -11,7 +11,7 @@ parameters:
     # database_password: %env.database_password%
 
     database_driver: pdo_mysql
-    database_host: 127.0.0.1
+    database_host: localhost
     database_port: ~
     database_name: wallabag
     database_user: root
