--- a/src/Wallabag/AnnotationBundle/Resources/config/routing_annotations.yml
+++ b/src/Wallabag/AnnotationBundle/Resources/config/routing_annotations.yml
@@ -1,4 +1,4 @@
 annotations:
   type: rest
-  resource:     "WallabagAnnotationBundle:WallabagAnnotation"
-  name_prefix:  annotations_
+  resource: 'Wallabag\AnnotationBundle\Controller\WallabagAnnotationController'
+  name_prefix: annotations_
