--- a/src/Wallabag/ApiBundle/Resources/config/routing_rest.yml
+++ b/src/Wallabag/ApiBundle/Resources/config/routing_rest.yml
@@ -1,39 +1,39 @@
 entry:
   type: rest
-  resource: "WallabagApiBundle:EntryRest"
+  resource: 'Wallabag\ApiBundle\Controller\EntryRestController'
   name_prefix:  api_
 
 search:
   type: rest
-  resource: "WallabagApiBundle:SearchRest"
+  resource: 'Wallabag\ApiBundle\Controller\SearchRestController'
   name_prefix:  api_
 
 tag:
   type: rest
-  resource: "WallabagApiBundle:TagRest"
+  resource: 'Wallabag\ApiBundle\Controller\TagRestController'
   name_prefix:  api_
 
 tagging_rule:
   type: rest
-  resource: "WallabagApiBundle:TaggingRuleRest"
+  resource: 'Wallabag\ApiBundle\Controller\TaggingRuleRestController'
   name_prefix:  api_
 
 annotation:
   type: rest
-  resource: "WallabagApiBundle:AnnotationRest"
+  resource: 'Wallabag\ApiBundle\Controller\AnnotationRestController'
   name_prefix:  api_
 
 misc:
   type: rest
-  resource: "WallabagApiBundle:WallabagRest"
+  resource: 'Wallabag\ApiBundle\Controller\WallabagRestController'
   name_prefix:  api_
 
 user:
   type: rest
-  resource: "WallabagApiBundle:UserRest"
+  resource: 'Wallabag\ApiBundle\Controller\UserRestController'
   name_prefix:  api_
 
 config:
     type: rest
-    resource: "WallabagApiBundle:ConfigRest"
+    resource: 'Wallabag\ApiBundle\Controller\ConfigRestController'
     name_prefix:  api_
